# SLAHAN

./: .gitignore  LICENSE  README.md
ROUGE-1.5.5/data/: WordNet-2.0.exc.db
bert/: README.md  extract_features.py  jsonl2hdf5.py
compressor/: CMakeLists.txt
compressor/cmake/: FindBoost.cmake
compressor/include/s2s/corpus/: batch.hpp  comp.hpp  corpora.hpp  corpora_utils.hpp  dict_set.hpp  dicts.hpp  elmo.hpp  options.hpp  token.hpp  utils.hpp
compressor/include/s2s/decode/: beam.hpp  greedy.hpp  hypothesis.hpp  print.hpp
compressor/include/s2s/dynet/: dict.h
compressor/include/s2s/learner/: attn.hpp  base.hpp  learner.hpp  lstm.hpp  slahan.hpp  tagger.hpp
compressor/include/s2s/nn/: attn.hpp  base.hpp  encdec.hpp  lstm.hpp  slahan.hpp  tagger.hpp
compressor/include/s2s/predict/: predict.hpp
compressor/include/s2s/test/: corp.hpp  encdec.hpp  test.hpp
compressor/include/s2s/train/: train.hpp
compressor/include/word2vec/: readbin.hpp
compressor/lib/: attn.cpp  base.cpp  dict.cc  lstm.cpp  slahan.cpp  tagger.cpp
dynet/: CMakeLists.txt
scripts/setup/: clean.sh  compile.sh  download.sh  setup.sh
scripts/tools/: clean_corpus.py  conll2dep.py  conv2text.py  convert_conll.py  convert_google_json.py  dep_check.py  eval_char_len.py  eval_overlap_macro.py  eval_overlap_macro_wo_label.py  eval_overlap_micro.py  extract_glove_features.py  feature.py  len_check.py  truncate.py  truncate_wo_label.py
share/: README.md
share/bcn/: attn_0.comp  attn_1.comp  attn_2.comp  base_0.comp  base_1.comp  base_2.comp  child_w_syn_0.comp  child_w_syn_1.comp  (+29 more)
(+72 files in other folders)
